# beyond

./: 2.drawio  CMakeLists.txt  GloVe.drawio  README.md  Untitled Diagram.drawio  main.cpp  qkv.drawio  self_attention.drawio  tensor-ops.drawio  word2vec.drawio
apps/: bert.cc  cnn.cc  dnn.cc  dnn.h  gpt.cc  lstm.cc  lstm.h  model.cc  rnn.cc  transformer.cc  transformer.h
docs/: Untitled Diagram.drawio  dev-details.md  support.md
src/: common.h  constant.h  corpus.h  global.h  global_ops.h  global_variables.h  initializers.h  layers.h  log.h  nn.h  node.h  ops.h  optimizers.h  session.h  shape.cpp  shape.h  tensor.h  tensor_ops.h  utils.h  variable.h
test/: execute_test.h  main.cpp  test_data.txt
